...
        }
    }

    AuthScreen(
        tabletMode = tabletMode,
        modifier = modifier,
        title = "Register",
        bannerImg = bannerImg,
        screenState = screenState,
        loader = loader,
    ) {

        EmailTextField(
...
